Fix font-sizes to match figma on mobile

--- a/working/index.css
+++ b/working/index.css
@@ -18,8 +18,8 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 32px;
+    line-height: 40px;
 }
 
 h1 span {
@@ -27,8 +27,8 @@ h1 span {
 }
 
 h2 {
-    font-size: 32px;
-    line-height: 44px;
+    font-size: 24px;
+    line-height: 33px;
 }
 
 h3 {
